Added swagger annotation to all actions, fixed response structs
