# golang-service/controllers/db-side-aggregation-controller.go
@@ -19,6 +19,13 @@ func NewDBSAController(db *gorm.DB) *DBSAController {
 	return &DBSAController{db, repository}
 }
 
+// GetMinMaxAvgRating godoc
+// @Summary DB side aggregation of the min, max, avg news rating
+// @Description get min, max, avg news rating
+// @Produce json
+// @Success 200 {object} response.MinMaxAvgRating
+// @Failure 500 {object} response.Response Internal server error
+// @Router /api/dbsa/news/min-max-avg-rating [get]
 func (dbsac *DBSAController) GetMinMaxAvgRating(w http.ResponseWriter, r *http.Request) {
 	start := time.Now()
 
@@ -31,13 +38,20 @@ func (dbsac *DBSAController) GetMinMaxAvgRating(w http.ResponseWriter, r *http.R
 	end := time.Now()
 	logResp := response.NewLog(start, end)
 	resp := struct {
-		response.MinMaxAvgRating
+		response.MinMaxAvg
 		response.Log
 	}{*minMaxAvgResp, *logResp}
 
 	response.Send(w, resp, "", http.StatusOK)
 }
 
+// GetPerMonthJSONData godoc
+// @Summary DB side aggregation of the min, max, avg, count news per month
+// @Description get min, max, avg, count news per month
+// @Produce json
+// @Success 200 {object} response.PerMonthJSONData
+// @Failure 500 {object} response.Response Internal server error
+// @Router /api/dbsa/news/per-month-json-data [get]
 func (dbsac *DBSAController) GetPerMonthJSONData(w http.ResponseWriter, r *http.Request) {
 	start := time.Now()
 
@@ -50,7 +64,7 @@ func (dbsac *DBSAController) GetPerMonthJSONData(w http.ResponseWriter, r *http.
 	end := time.Now()
 	logResp := response.NewLog(start, end)
 	resp := struct {
-		response.PerMonthJSONData
+		response.PerMonthJSON
 		response.Log
 	}{*perMonthJSONResp, *logResp}
 
