# golang-service/response/response-structs.go
@@ -2,6 +2,11 @@ package response
 
 import "time"
 
+type Response struct {
+	Message string      `json:"message"`
+	Body    interface{} `json:"body"`
+}
+
 type Log struct {
 	Duration float64 `json:"duration"`
 }
@@ -11,12 +16,33 @@ func NewLog(start time.Time, end time.Time) *Log {
 	return &Log{duration}
 }
 
-type MinMaxAvgRating struct {
+type LogOnly struct {
+	Message string
+	Body    Log
+}
+
+type MinMaxAvg struct {
 	Min int     `json:"min"`
 	Max int     `json:"max"`
 	Avg float64 `json:"avg"`
 }
 
-type PerMonthJSONData struct {
+type MinMaxAvgRating struct {
+	Message string
+	Body    struct {
+		MinMaxAvg
+		Log
+	}
+}
+
+type PerMonthJSON struct {
 	Data string `json:"data"`
+}
+
+type PerMonthJSONData struct {
+	Message string
+	Body    struct {
+		PerMonthJSON
+		Log
+	}
 }
