# golang-service/server/server.go
@@ -13,8 +13,8 @@ import (
 	"github.com/jinzhu/gorm"
 	"github.com/urfave/negroni"
 
-	"github.com/swaggo/http-swagger"
-	"../docs"
+	_ "github.com/AlexeySemin/test/golang-service/docs" // docs is generated by Swag CLI
+	httpSwagger "github.com/swaggo/http-swagger"
 )
 
 type server struct {
@@ -48,22 +48,20 @@ func (s *server) registerRoutes() {
 	dbsac := controllers.NewDBSAController(s.db)
 	ssac := controllers.NewSSAController(s.db)
 
-	s.router.HandleFunc("/swagger/*", httpSwagger.Handler(
-		httpSwagger.URL("http://localhost:8081/swagger/doc.json")
-	)).Methods(http.MethodGet)
+	s.router.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 
-	subrouter := s.router.PathPrefix("/api").Subrouter()
+	apiRout := s.router.PathPrefix("/api").Subrouter()
 
-	subrouter.HandleFunc("/news", cc.FillNewsDB).Methods(http.MethodPost)
-	subrouter.HandleFunc("/news", cc.ClearDB).Methods(http.MethodDelete)
+	apiRout.HandleFunc("/news", cc.FillNewsDB).Methods(http.MethodPost)
+	apiRout.HandleFunc("/news", cc.ClearDB).Methods(http.MethodDelete)
 
 	// DB side aggregation
-	subrouter.HandleFunc("/dbsa/news/min-max-avg-rating", dbsac.GetMinMaxAvgRating).Methods(http.MethodGet)
-	subrouter.HandleFunc("/dbsa/news/per-month-json-data", dbsac.GetPerMonthJSONData).Methods(http.MethodGet)
+	apiRout.HandleFunc("/dbsa/news/min-max-avg-rating", dbsac.GetMinMaxAvgRating).Methods(http.MethodGet)
+	apiRout.HandleFunc("/dbsa/news/per-month-json-data", dbsac.GetPerMonthJSONData).Methods(http.MethodGet)
 
 	// Server side aggregation
-	subrouter.HandleFunc("/ssa/news/min-max-avg-rating", ssac.GetMinMaxAvgRating).Methods(http.MethodGet)
-	subrouter.HandleFunc("/ssa/news/per-month-json-data", ssac.GetPerMonthJSONData).Methods(http.MethodGet)
+	apiRout.HandleFunc("/ssa/news/min-max-avg-rating", ssac.GetMinMaxAvgRating).Methods(http.MethodGet)
+	apiRout.HandleFunc("/ssa/news/per-month-json-data", ssac.GetPerMonthJSONData).Methods(http.MethodGet)
 }
 
 // NewServer init and return new server
